<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_header_height"
        app:background="@color/lightGray"
        tools:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/dimen_48"
        android:padding="@dimen/dimen_8"
        android:background="@drawable/bg_shape_rounded_48px"
        android:backgroundTint="@color/black_at_50"
        android:layout_height="@dimen/dimen_48"
        android:layout_margin="@dimen/dimen_8"
        android:src="@drawable/icon_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/dimen_avatar_size"
        android:layout_height="@dimen/dimen_avatar_size"
        android:layout_marginStart="@dimen/dimen_48"
        app:layout_constraintBottom_toBottomOf="@+id/bgHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgHeader" />

    <TextView
        android:id="@+id/txtId"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_48"
        android:layout_marginBottom="@dimen/dimen_8"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        tools:text="ID : 1" />

    <TextView
        android:id="@+id/txtName"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/txtId"
        app:layout_constraintTop_toBottomOf="@id/txtId"
        tools:text="Kelsy paramor" />

    <TextView
        android:id="@+id/txtProfession"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/bg_shape_rounded_48px"
        android:backgroundTint="@color/black_at_50"
        android:paddingHorizontal="@dimen/dimen_16"
        android:paddingVertical="@dimen/dimen_8"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/txtId"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        tools:text="Kelsy paramor" />

    <TextView
        android:id="@+id/lblEmail"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/detail_screen_lbl_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bgHeader" />

    <TextView
        android:id="@+id/txtEmail"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblEmail"
        tools:text="mkaradzas1@visualengin.com" />

    <TextView
        android:id="@+id/lblAge"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/detail_screen_lbl_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmail" />

    <TextView
        android:id="@+id/txtAge"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblAge"
        tools:text="21" />

    <TextView
        android:id="@+id/lblDescription"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/detail_screen_lbl_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAge" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDescription"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempo" />

</androidx.constraintlayout.widget.ConstraintLayout>